Обновление стилей и добавление анимаций

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </div>
     
     <!-- Контроллеры под видео -->
+    <div class="product-next-section">
     <div class="controls">
         <button onclick="handlers.like()">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -39,7 +40,7 @@
             <span id="cartCount" class="cart-count" style="display: none;">0</span>
         </button>
     </div>
-    
+    </div>
     <!-- Подвал -->
     <footer>
         <button onclick="handlers.profile()">
