--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>Видео маркет</title>
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
-    <!-- Видео -->
     <div id="video-container" class="video-container">
         <video id="currentVideo" controls>
             <source src="" type="video/mp4">
@@ -18,8 +17,6 @@
         </video>
     </div>
     
-    <!-- Контроллеры под видео -->
-    <div class="product-next-section">
     <div class="controls">
         <button onclick="handlers.like()">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -40,8 +37,7 @@
             <span id="cartCount" class="cart-count" style="display: none;">0</span>
         </button>
     </div>
-    </div>
-    <!-- Подвал -->
+
     <footer>
         <button onclick="handlers.profile()">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -60,10 +56,9 @@
         </button>
     </footer>
 
-    <!-- Скрипты -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
-    <script src="/js/VideoSlider.js"></script>
-    <script src="/js/handlers.js"></script>
-    <script src="/js/app.js"></script>
+    <script src="js/VideoSlider.js"></script>
+    <script src="js/handlers.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
