--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
+    <!-- Видео -->
     <div id="video-container" class="video-container">
         <video id="currentVideo" controls>
             <source src="" type="video/mp4">
@@ -17,6 +18,7 @@
         </video>
     </div>
     
+    <!-- Контроллеры под видео -->
     <div class="controls">
         <button onclick="handlers.like()">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -37,7 +39,8 @@
             <span id="cartCount" class="cart-count" style="display: none;">0</span>
         </button>
     </div>
-
+    
+    <!-- Подвал -->
     <footer>
         <button onclick="handlers.profile()">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -57,8 +60,8 @@
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
-    <script src="js/VideoSlider.js"></script>
-    <script src="js/handlers.js"></script>
-    <script src="js/app.js"></script>
+    <script src="/js/VideoSlider.js"></script>
+    <script src="/js/handlers.js"></script>
+    <script src="/js/app.js"></script>
 </body>
 </html>
